--- a/oblig1/style.css
+++ b/oblig1/style.css
@@ -41,6 +41,10 @@ a {
 	color: black;
 }
 
+nav {
+	padding-top: 20px;
+}
+
 nav a {
 	text-decoration: none;
 	font-weight: bolder;
@@ -50,11 +54,47 @@ nav a:hover {
 	text-decoration: underline;
 }
 
+/* Chosen menu item*/
+.nav-item-active {
+	text-decoration: underline;
+	background-color: #FF748C;
+	padding: 10px 20px;
+}
+
+h1 a {
+	font-family: 'Indie Flower', cursive;
+	text-decoration: none;
+}
+
+button, .button {
+	background-color: #FF748C;
+	padding: 10px 20px;
+	color: black;
+	text-decoration: none;
+}
+
+button:hover, 
+.button:hover {
+	text-decoration: underline;
+}
+
 main {
 	grid-column: 1/13;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	padding-bottom: 50px;
+}
+
+@media screen and (max-width: 768px) {
+	main {
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+.choose-movie {
+	grid-column: 1/13;
+	text-align: center;
 }
 
 .main-left {
@@ -71,18 +111,6 @@ main {
 	flex-direction: column;
 	justify-content: center;
 	align-items: baseline;
-}
-
-button, .button {
-	background-color: #FF748C;
-	padding: 10px 20px;
-	color: black;
-	text-decoration: none;
-}
-
-button:hover, 
-.button:hover {
-	text-decoration: underline;
 }
 
 footer {
