--- a/bookingsystem/resources/sass/app.scss
+++ b/bookingsystem/resources/sass/app.scss
@@ -11,6 +11,11 @@ input {
     padding: 0;
 }
 
+img {
+    height: auto;
+    max-width: 100%;
+}
+
 .navbar-laravel {
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
